# arithmetic

./: .gitignore  CMakeLists.txt  VERSION.md  arith_main.c  arith_utils.c  big_decimal.c  big_integer.c  check_param_list.c  gen_arithmetic.py  pre_input.c  test.c
include/: arith_utils.h  big_decimal.h  big_integer.h  pre_input.h
testcase/: add.in  add_decimal.in  div.in  div_decimal.in  error.in  mod.in  mod_v2.in  mul.in  mul_decimal.in  mul_v2.in  sub.in  sub_decimal.in  sum.in
